fix: use jre alpine to avoid missing modules/guessing links (#4)
Co-authored-by: batinica <batinicaz@users.noreply.github.com>